update backend and frontend components

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend",
+  "type": "module", 
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify"
@@ -13,6 +14,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
     "wrangler": "^3.79.0"
   }
 }
