--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,19 @@
 {
   "name": "backend",
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@shaikhaman/medium-common": "^1.0.0",
-    "hono": "^4.6.3",
-    "prisma": "^5.20.0"
+    "hono": "^4.6.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "wrangler": "^3.79.0"
