--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@shaikhaman/medium-common": "^1.0.0",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dompurify": "^3.1.7",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.451.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
